# ba2-batch-unpack-gui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_PLAN.md  README.md  main.py  pyproject.toml
src/: MainWindow.py  error.rs  lib.rs  log_viewer.rs  main.rs  update_checker.rs
src/ba2/: extractor.rs  mod.rs
src/config/: mod.rs
src/logging/: mod.rs
src/misc/: BsaChecker.py  BsaExtractor.py  BsaProcessor.py  Config.py  Utilities.py
src/model/: PreviewTableModel.py
src/models/: mod.rs
src/operations/: extract.rs  mod.rs  path.rs  retry.rs  scan.rs
src/platform/: unix.rs  windows.rs
src/prefab/: CustomIcon.py  InfoBar.py  MessageBox.py
src/ui/: mod.rs  notifications.rs
src/view/: CheckFileScreen.py  LogView.py  MainScreen.py  SettingScreen.py
src/view/setting_card/: AboutSettingCard.py  IgnoredSettingCard.py  InputSettingCard.py  PostfixSettingCard.py
tests/: config_persistence.rs
ui/: main.slint
unpackrr-rs/: Cargo.toml  MANUAL_TESTING_CHECKLIST.md  README.md  TESTING.md  THIRD_PARTY_LICENSES.md  build-portable.ps1  build-portable.sh
unpackrr-rs/src/: error.rs  lib.rs  main.rs  update_checker.rs
unpackrr-rs/src/ba2/: mod.rs
unpackrr-rs/src/config/: mod.rs
unpackrr-rs/src/operations/: extract.rs  mod.rs  path.rs  retry.rs  scan.rs
unpackrr-rs/src/platform/: mod.rs  unix.rs
unpackrr-rs/src/ui/: mod.rs  notifications.rs
unpackrr-rs/tests/: config_persistence.rs
unpackrr-rs/ui/: main.slint
