[package]
name = "unpackrr"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["evildarkarchon"]
description = "High-performance BA2 batch unpacker with Fluent Design UI"
repository = "https://github.com/evildarkarchon/ba2-batch-unpack-gui"
homepage = "https://github.com/evildarkarchon/ba2-batch-unpack-gui"
keywords = ["ba2", "bethesda", "fallout", "archive", "unpacker"]
categories = ["game-development", "gui"]
readme = "README.md"

# Optimize for size and performance in release builds
[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"               # Fat LTO for best optimization (slower build)
codegen-units = 1          # Better optimization at cost of compile time
strip = true               # Remove debug symbols
panic = "abort"            # Smaller binary (no stack unwinding)

# Enable some optimizations in dev for better testing experience
[profile.dev]
opt-level = 1

[dependencies]
# GUI Framework - Using winit backend with Skia renderer on all platforms
# Disable default features to prevent auto-selection of Qt backend on Linux
slint = { version = "1.9", default-features = false, features = ["backend-winit", "renderer-skia", "std", "compat-1-2"] }

# Async compatibility (CRITICAL: Slint + Tokio bridge)
async-compat = "0.2"

# Async runtime for file operations
tokio = { version = "1.41", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Pattern matching
regex = "1.11"

# Path and directory handling
directories = "6.0.0"
dunce = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

# Parallel processing
rayon = "1.10"

# Memory mapping for large files
memmap2 = "0.9"

# Size formatting
humansize = "2.1"

# Native file dialogs
rfd = "0.15"

# HTTP client for update checking (Phase 2.6)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Version comparison (Phase 2.6)
semver = "1.0"

# Open URLs in browser (Phase 2.6)
open = "5.0"
futures = "0.3.31"

# Windows-only dependencies (Phase 2.9)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
slint-build = "1.9"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that conflict with readability
must_use_candidate = "allow"
missing_errors_doc = "allow"

[dev-dependencies]
tempfile = "3.23.0"
