[project]
name = "ba2-batch-unpack-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "humanize>=4.14.0",
    "pyside6>=6.10.0",
    "pyside6-fluent-widgets>=1.9.1",
]

[tool.pyright]
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportOptionalMemberAccess = "none"
reportIncompatibleMethodOverride = "none"

[tool.ruff]
indent-width = 4
line-length = 140

[tool.ruff.format]
preview = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
ignore = [
	"ANN401",  # Allow use of typing.Any
	"E501",    # Duplicate of B950 line-too-long
	"E722",    # Duplicate of B001 bare-except
	"PLR0904", # too-many-public-methods
	"PLR0911", # too-many-return-statements
	# "PLR0912", # too-many-branches
	"PLR0913",
	"PLR0914", # too-many-local-variables
	"PLR0915", # too-many-statements
	"PLR0917",
	"TRY003",  # Allow custom exception messages
	"TRY400",  # Use `logging.exception` instead of `logging.error`
	"PLR2004", # Allow magic values in comparisons
	"PLW2901", # Allow overwriting loop variables
	"SLF001",
	"PLC0415",
	"DOC502",
	"Q000",
    "D100",
    "D101",
    "D102",
    "N999",
    "D107",
    "PLR6301"
]

extend-select = [
	"A",     # Builtin Shadowing
	"ANN",   # Type Annotations
	"ASYNC", # Async Suggestions
	"ARG",   # Unused Arguments
	"B",     # Bugs/Design Problems
	"BLE",   # Blind Except
	"C4",    # Comprehensions
	"FA",    # Future Annotations
	"FLY",   # F-Strings
	"FURB",  # Modernization
	"I",     # Import Sorting
	"ICN",   # Import Naming Conventions
	"ISC",   # Implicit String Concatenation
	"LOG",   # Logging
	"PERF",  # Performance Anti-Patterns
	"PIE",   # Misc Lints
	"PL",    # Pylint
	"PT",    # PyTest
	"PTH",   # Prefer Pathlib
	"RET",   # Return
	"RSE",   # Raise
	"RUF",   # Ruff
	"SIM",   # Simplify
	"SLF",   # Self
	"TCH",   # Type Checking
	"TID",   # Tidy Imports
	"TRY",   # Exception Anti-Patterns
	"UP",    # pyupgrade (New Syntax Suggestions)
	"FIX",
	"FA",
	"Q",
	"TID252",
	"DOC",
	"D100",
	"D101",
	"D102",
	"D103",
	"D104",
	"D105",
	"D106",
	"D107",
	"D200",
	"D300",
	"D301",
	"D414",
	"D417",
	"D418",
	"D419"

	# "D",     # pydocstyle
	# "C901",  # Complex Structures
	# "COM",   # Commas
	# "DTZ",   # Unsafe/Naive Datetimes
	# "EM",    # Exception Messages
	# "FBT",   # Boolean Traps
	# "G",     # Logging Formatting
	# "N",     # PEP8 Naming Conventions
	# "PGH",   # PyGrep Hooks
	# "PYI",   # Stub Files
	# "S",     # Security Testing
]
[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
[tool.coverage.run]
source = ["."]
omit = [
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/build/*",
    "*/dist/*",
    "*/tests/*",
    "*/_internal/*",
    "*/Release/*",
    "*/CLASSIC Backup/*",
    "*/Crash Logs/*",
    "*/Examples/*",
    "*/performance_baselines/*",
    "install_requirements.py",
    "setup.py"
]
branch = true
